Scan and ECHO Forward till Ocean is detected